--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ waveletNoiseTile.bin
 
 # Build files for VS and VS Code.
 /build/
+cmake-build-debug*
 /out/
 CMakeSettings.json
 CMakePresets.json
